--- a/serviceApp/templates/serviceApp/MyServices.html
+++ b/serviceApp/templates/serviceApp/MyServices.html
@@ -63,6 +63,35 @@
 </div>
 </div>
 
+<br><br><br>
+<h1 class="downloadWorld">
+    <span style="color:#0062ff;">Our&nbsp;</span><span>Teams</span>
+      <img class="img2" src="{% static 'img/united.png' %}">
+    </h1>
+    <hr class="line container title text-center wow fadeIn">
+<div class="servicess" >
+  
+<div class="conatainer">
+        {%for item in team_list%}
+        
+    <div class="serviceBox">
+        <div class="icon">
+          <img style="width:100%;height:100%;border-bottom: 1px solid #ccc;" src="{{item.team_img.url}}">
+        </div>
+        <div class="content">
+            <h4 class="p-3 m-0 name12" id="title">{{item.team_name}}</h4>
+            <p class="content55" id="content" style="color:black">{{item.team_details}}</p>
+        </div>
+    </div>
+
+    {% endfor %}
+
+
+</div>
+</div>
+
+
+
 
 
 <div class="context">
